# demo-web-service

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEFECT_REPORT.md  DEPLOYMENT_REVIEW.md  Dockerfile  Makefile  README.md  REVIEW_SUMMARY.md  TEST_RESULTS.md  __main__.py  cloudbuild.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy-gcp.yml
REQ/: REQ-1-1.md  REQ-1.md
app/: __init__.py  main.py
app/api/: __init__.py  demo.py  health.py
app/config/: settings.py
app/db/: connection.py
app/middleware/: __init__.py  request_size_limit.py  security_headers.py
app/models/: __init__.py  requests.py  responses.py
app/rate_limiter/: __init__.py  token_bucket.py
app/security/: __init__.py  clerk_middleware.py  fingerprint.py  ip_limiter.py
app/services/: __init__.py  clerk_service.py  client_ip_service.py  demo_agent.py  gemini_client.py  prompt_manager.py  user_service.py
app/utils/: __init__.py  logging.py  sanitizers.py  validators.py
deploy/: DEPLOYMENT_GUIDE.md  Dockerfile.cloudrun  README.md  api-gateway-spec.yaml  deploy-manual.sh  env.production  schema-cloud-sql.sql  setup-gcp.sh
prompts/: demo_agent.jinja2
prompts/config/: prompt_versions.yaml
prompts/data/: business_info.yaml  demo_faqs.yaml  policies.yaml
prompts/modules/: demo_instructions.jinja2  faq_context.jinja2  token_warning.jinja2
tests/: README_TESTS.md  conftest.py  test_captcha_handler.py  test_ip_limiter.py  test_ip_limiter_async.py  test_token_bucket.py  test_token_counting.py
